<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">MyFeeds</string>
    
    <!-- General -->
    <string name="add">Add</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>    
    
    <!-- Categories -->
    <string name="category">Category</string>
    <string name="CategoryIcon">Category Icon</string>	
    <string name="addCategory">New category</string>
    <string name="editCategory">Edit category</string>
    <string name="category_error_empty">You must enter a name</string>
    <string name="category_exists">Category {name} exists</string>
    <string name="category_added">Category {name} added</string>
    <string name="category_updated">Category {name} updated</string>
    <string name="category_deleted">Category {name} deleted</string>
    <string name="category_confirm_delete">¿Delete category {name} and their feeds?</string>
    <string name="categories_list_empty">There\'s no categories.</string>
    
    <!-- Feeds -->
    <string name="feeds_list_empty">There\'s no feeds in this category.</string>
    <string name="FeedIcon">Feed Icon</string>
    <string name="new_feed">New Feed</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="category_prompt">Choose a category</string>
    <string name="title_required">Title cannot be empty</string>
    <string name="title_exists">Feed {title} exists</string>
    <string name="url_required">Url cannot be empty</string>
    <string name="url_valid">The URL isn\'t valid</string>
    <string name="feed_confirm_delete">¿Delete feed {title}?</string>
    <string name="feed_deleted">Feed {title} deleted</string>
    <string name="feed_info">Info</string>
    <string name="feed_entries">Items</string>
    <string name="feed_error_read">Error reading this feed.</string>
    <string name="feed_no_entries">There\'s no entries in this feed.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loadingmore">Loading more entries&#8230;</string>
</resources>